Add localized support email copy control to footer

--- a/products.html
+++ b/products.html
@@ -380,8 +380,13 @@
                     <span data-i18n="app.footer.partner">ThreeGents</span>
                 </a>
             </div>
-            <div class="site-footer__section">
-                <a href="mailto:support@threegents.biz" class="site-footer__link" data-i18n="app.footer.support">Support</a>
+            <div class="site-footer__section site-footer__support">
+                <div class="site-footer__support-actions">
+                    <span class="site-footer__label" data-i18n="app.footer.support">Support</span>
+                    <a href="mailto:support@threegents.biz" class="site-footer__link site-footer__support-email" data-i18n="app.footer.supportEmail">support@threegents.biz</a>
+                    <button type="button" class="site-footer__copy-email" data-i18n="app.footer.copyEmail"></button>
+                </div>
+                <span class="site-footer__support-feedback" aria-live="polite"></span>
             </div>
         </div>
     </footer>
